--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "dependencies": {
+    "@ladle/react": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
